force-app/main/default/objects/Utilization_Commercial_Prods__c/Utilization_Commercial_Prods__c.object-meta.xml
<CustomObject>
    <description>The FDA Approved Commercial products for the utilization with fiscal year prior 2023.</description>
    <label>Utilization Commercial Prod</label>
    <nameField>
        <label>Utilization Commercial Prods Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilization Commercial Prods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>