force-app/main/default/objects/Utilization_Commercial_Prods__c/fields/Commercial_Name__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Name__c</fullName>
    <label>Commercial Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>