force-app/main/default/objects/Utilization_Commercial_Prods__c/fields/Fda_Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>Fda_Approval_Number__c</fullName>
    <label>Fda Approval Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>