force-app/main/default/objects/Utilization_Commercial_Prods__c/fields/Fda_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Fda_Approval_Type__c</fullName>
    <label>Fda Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Biologic</fullName>
            </value>
            <value>
                <fullName>Medical Device</fullName>
            </value>
            <value>
                <fullName>Drug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>