force-app/main/default/objects/Utilization_Commercial_Prods__c/fields/Govt_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Govt_Review_Status__c</fullName>
    <label>Govt Review Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>