force-app/main/default/objects/Utilization_Commercial_Prods__c/fields/Public_Ind__c.field-meta.xml
<CustomField>
    <fullName>Public_Ind__c</fullName>
    <label>Public Ind</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>