force-app/main/default/objects/Utilization_Commercial_Prods__c/fields/Utilization_Report__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Report__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Utilization Report</label>
    <referenceTo>Utilization_Report__c</referenceTo>
    <relationshipLabel>Utilization Commercial Prods</relationshipLabel>
    <relationshipName>Utilization_Commercial_Prods</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>